--- a/layouts/_default/data-overview.html
+++ b/layouts/_default/data-overview.html
@@ -5,28 +5,38 @@
 
 <h4 style="margin: 1em 4em;">Declared data</h4>
 
-<table style="width:90%; margin:1em auto;">
-  <thead>
-    <tr>
-      <th>Identifier</th>
-      <th>Name of sharer</th>
-      <th>Posting date</th>
-      <th>Data label</th>
-      <th>Data description</th>
+<div class="data-declararation-overview-wrapper">
+  <table id="data-declararation-overview">
+    <thead>
+      <tr>
+        <th>Identifier</th>
+        <th>Name of sharer</th>
+        <th>Posting date</th>
+        <th>Data label</th>
+        <th>Data description</th>
+      </tr>
+    </thead>
+    <tbody>
+    {{ range $.Site.Data.data }}
+     <tr>
+      <td>{{ .data_declaration.id }}</td>
+      <td>{{ .data_declaration.sharerName }}</td>
+      <td>{{ .data_declaration.postDate }}</td>
+      <td>{{ .data_declaration.label }}</td>
+      <td>{{ .data_declaration.description }}</td>
     </tr>
-  </thead>
-  <tbody>
-  {{ range $.Site.Data.data }}
-   <tr>
-    <td>{{ .data_declaration.id }}</td>
-    <td>{{ .data_declaration.sharerName }}</td>
-    <td>{{ .data_declaration.postDate }}</td>
-    <td>{{ .data_declaration.label }}</td>
-    <td>{{ .data_declaration.description }}</td>
-  </tr>
-  {{ end }}
-  </tbody>
-</table>
+    {{ end }}
+    </tbody>
+  </table>
+</div>
 
+<!-- Start of footer -->
 {{ partial "footer_container.html" . }}
 {{ partial "footer.html" . }}
+<!-- End of footer -->
+
+<script>
+  $(document).ready( function () {
+      $('#data-declararation-overview').DataTable();
+  } );
+</script>
